<resources>
    <string name="app_name">GB_MaterialDesign</string>
    <string name="photo_of_the_day_stub">Photo of the day</string>
    <string name="search_wiki">Найти в Википедии</string>
    <string name="wiki_helper_text">Поищите термин в википедии</string>
    <string name="favourite">favourite</string>
    <string name="settings">settings</string>
    <string name="search">Search</string>

    <!-- AppState Snackbar -->
    <string name="requestError">Ошибка загрузки данных</string>
    <string name="repeatRequest">Отправить повторный запрос</string>

    <!-- Chip titles -->
    <string name="chipToday">today</string>
    <string name="chipYesterday">yesterday</string>
    <string name="chipBeforeYesterday">day before yesterday</string>

    <!-- Color styles titles -->
    <string name="colorThemeTitle">Выберите цветовую тему</string>
    <string name="jupiter_style_title">Юпитер</string>
    <string name="mars_style_title">Марс</string>
    <string name="moon_style_title">Луна</string>

    <!-- TabLayout titles -->
    <string name="tabToday">Сегодня</string>
    <string name="tabYesterday">Вчера</string>
    <string name="tabBeforeYesterday">Позавчера</string>

    <!-- NavigationView titles -->
    <string name="navView_telescope">Телескоп</string>
    <string name="navView_earth">Земля</string>
    <string name="navView_mars">Марс</string>
    <string name="navView_space">Космос</string>
    <string name="navView_settings">Настройки</string>

    <!-- Earth Picture fragment -->
    <string name="earthPictureTitle">Титульник</string>
    <string name="earthPictureDate">Дата и время снимка:</string>
    <string name="pictureCoordinates">Координаты снимка</string>
    <string name="coordinatesLon">LON</string>
    <string name="coordinatesLat">LAT</string>
    <string name="tab_layout_sometime">в какое-то время</string>

    <!-- Mars camera menu -->
    <string name="menu_mars_camera_fhaz">Front Hazard Avoidance Camera</string>
    <string name="menu_mars_camera_chemcam">Chemistry and Camera Complex</string>
    <string name="menu_mars_camera_navcam">Navigation Camera</string>

    <!-- Mars Picture fragment -->
    <string name="mars_picture_title">Снимок сделан:</string>
    <string name="mars_picture_rover">Ровер -</string>
    <string name="mars_picture_date">Дата снимка на Земле:</string>
    <string name="mars_picture_mars_sol">Дата снимка в Марсианских сол:</string>
    <string name="mars_picture_camera">Камера:</string>

    <!-- Asteroid detail fragment -->
    <string name="asteroid_name">Название астероида</string>
    <string name="estimated_diameter">Расчетный диаметр</string>
    <string name="min_estimated_diameter">Минимальный расчитанный диаметр</string>
    <string name="km">км</string>
    <string name="max_estimated_diameter">Максимальный расчитанный диаметр</string>
    <string name="relative_velocity">Относительная скорость</string>
    <string name="km_per_sec">км/с</string>
    <string name="potentially_hazardous">Потенциальная опасность</string>
    <string name="sentry_object">Отслеживаемость</string>
    <string name="miss_distance">Расстояние прохода от Земли</string>

    <!-- Space fragment -->
    <string name="solar_flare">Вспышки на солнце</string>
    <string name="geomagnetic_storm">Геомагнитные бури</string>
    <string name="radiation_belt">Радиационный фон</string>
    <string name="show_details">Показать описание</string>

    <!-- PictureOfTheDay Bottom menu -->
    <string name="menu_contacts">Контакты</string>

    <!-- Contacts Fragment Item -->
    <string name="company_name">Название компании</string>
    <string name="user_name">ФИО контакта</string>

</resources>