<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:theme="@style/MyGreyTheme.GB_MaterialDesign">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:singleSelection="true"
                app:checkedChip="@+id/chipToday"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipToday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chipToday"
                    style="@style/MyGreyChip.GB_MaterialDesign"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipYesterday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chipYesterday"
                    style="@style/MyGreyChip.GB_MaterialDesign"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipDayBeforeYesterday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chipBeforeYesterday"
                    style="@style/MyGreyChip.GB_MaterialDesign"/>

            </com.google.android.material.chip.ChipGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="@dimen/textInput_0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:hint="@string/search_wiki"
                app:counterEnabled="true"
                app:endIconCheckable="true"
                app:counterMaxLength="20"
                app:helperText="@string/wiki_helper_text"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/ic_wikipedia"
                app:layout_constraintTop_toBottomOf="@id/chipGroup"
                app:layout_constraintBottom_toTopOf="@id/pictureOfTheDay"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.gb_materialdesign.utils.EquilateralImageView
                android:id="@+id/pictureOfTheDay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/image_8dp"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:contentDescription="@string/photo_of_the_day_stub"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <include
                android:id="@+id/includedLoadingLayout"
                layout="@layout/loading_layout" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <include layout = "@layout/bottom_sheet_layout"/>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottom_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:hideOnScroll="true"
        app:layout_scrollFlags="scroll|enterAlways"
        android:backgroundTint="@color/grey_style_1"
        app:fabAlignmentMode="center"
        app:navigationIcon="@drawable/ic_hamburger_menu_bottom_bar"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/grey_primary_light"
        app:layout_anchor="@id/bottom_app_bar"
        android:src="@drawable/ic_plus_fab"
        android:tint="#FFFFFF"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>