<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/asteroid_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/included_loading_layout"
        layout="@layout/loading_layout" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_ver_50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_ver_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hor_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hor_20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hor_25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hor_30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.30" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hor_35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hor_40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.40" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hor_48"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="380dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hor_56"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.56" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hor_61"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.61" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hor_66"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.66" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hor_71"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.71" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hor_76"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.76" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hor_81"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.81" />

    <TextView
        android:id="@+id/asteroid_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/grey_primary_light"
        android:textColor="@color/white"
        android:gravity="center"
        android:text="@string/asteroid_name"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@id/guideline_hor_10"
        app:layout_constraintTop_toTopOf="@id/guideline_hor_10"
        app:layout_constraintRight_toLeftOf="@id/asteroid_detail" />

    <TextView
        android:id="@+id/estimated_diameter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:background="@color/grey_primary_light"
        android:textColor="@color/white"
        android:gravity="start"
        android:text="@string/estimated_diameter"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/guideline_hor_20"
        app:layout_constraintTop_toTopOf="@id/guideline_hor_20"
        app:layout_constraintRight_toRightOf="@id/asteroid_name"/>

    <TextView
        android:id="@+id/min_estimated_diameter_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:background="@color/grey_primary_light"
        android:textColor="@color/white"
        android:gravity="start"
        android:text="@string/min_estimated_diameter"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/guideline_hor_25"
        app:layout_constraintTop_toTopOf="@id/guideline_hor_25"
        app:layout_constraintRight_toRightOf="@id/asteroid_name"/>

    <LinearLayout
        android:id="@+id/min_estimated_diameter_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:background="@color/grey_primary_light"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/guideline_hor_30"
        app:layout_constraintTop_toTopOf="@id/guideline_hor_30"
        app:layout_constraintRight_toRightOf="@id/asteroid_name">

        <TextView
            android:id="@+id/min_estimated_diameter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginHorizontal="8dp"
            android:gravity="start"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:textColor="@color/white"
            android:gravity="start"
            android:text="@string/km"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/max_estimated_diameter_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:textColor="@color/white"
        android:background="@color/grey_primary_light"
        android:gravity="start"
        android:text="@string/max_estimated_diameter"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/guideline_hor_35"
        app:layout_constraintTop_toTopOf="@id/guideline_hor_35"
        app:layout_constraintRight_toRightOf="@id/asteroid_name"/>

    <LinearLayout
        android:id="@+id/max_estimated_diameter_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:background="@color/grey_primary_light"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/guideline_hor_40"
        app:layout_constraintTop_toTopOf="@id/guideline_hor_40"
        app:layout_constraintRight_toRightOf="@id/asteroid_name">

        <TextView
            android:id="@+id/max_estimated_diameter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:textColor="@color/white"
            android:gravity="start"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:textColor="@color/white"
            android:gravity="start"
            android:text="@string/km"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/asteroid_velocity_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:background="@color/grey_primary_light"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/guideline_hor_48"
        app:layout_constraintTop_toTopOf="@id/guideline_hor_48"
        app:layout_constraintRight_toRightOf="@id/asteroid_name">

        <TextView
            android:id="@+id/asteroid_velocity_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:gravity="start"
            android:text="@string/relative_velocity"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/asteroid_velocity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:textColor="@color/white"
                android:gravity="start"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:textColor="@color/white"
                android:gravity="start"
                android:text="@string/km_per_sec"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/miss_distance_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:background="@color/grey_primary_light"
        android:textColor="@color/white"
        android:gravity="start"
        android:text="@string/miss_distance"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/guideline_hor_56"
        app:layout_constraintTop_toTopOf="@id/guideline_hor_56"
        app:layout_constraintRight_toRightOf="@id/asteroid_name"/>

    <LinearLayout
        android:id="@+id/miss_distance_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/grey_primary_light"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/guideline_hor_61"
        app:layout_constraintTop_toTopOf="@id/guideline_hor_61"
        app:layout_constraintRight_toRightOf="@id/asteroid_name">

        <TextView
            android:id="@+id/miss_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:textColor="@color/white"
            android:gravity="start"
            android:text="@string/km"
            android:textSize="20sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/potentially_hazardous_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:textColor="@color/white"
        android:background="@color/grey_primary_light"
        android:gravity="start"
        android:text="@string/potentially_hazardous"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/guideline_hor_66"
        app:layout_constraintTop_toTopOf="@id/guideline_hor_66"
        app:layout_constraintRight_toRightOf="@id/asteroid_name"/>

    <TextView
        android:id="@+id/potentially_hazardous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:background="@color/grey_primary_light"
        android:gravity="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/guideline_hor_71"
        app:layout_constraintTop_toTopOf="@id/guideline_hor_71"
        app:layout_constraintRight_toRightOf="@id/asteroid_name"/>

    <TextView
        android:id="@+id/sentry_object_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:textColor="@color/white"
        android:background="@color/grey_primary_light"
        android:gravity="start"
        android:text="@string/sentry_object"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/guideline_hor_76"
        app:layout_constraintTop_toTopOf="@id/guideline_hor_76"
        app:layout_constraintRight_toRightOf="@id/asteroid_name"/>

    <TextView
        android:id="@+id/sentry_object"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:background="@color/grey_primary_light"
        android:gravity="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/guideline_hor_81"
        app:layout_constraintTop_toTopOf="@id/guideline_hor_81"
        app:layout_constraintRight_toRightOf="@id/asteroid_name"/>

    <TextView
        android:id="@+id/tap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="50dp"
        android:text="@string/show_details"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>